# thesis-project

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitpod.yml  LICENSE  README.md  genindex.html  intro.html  markdown-notebooks.html  markdown.html  notebooks.html  resources.md  search.html  searchindex.js  start  start.sh  thesis.code-workspace
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: book.yaml  book.yml  latex.yaml  latex.yml  python-centpy-git.yml  python-clawpack.yml  python-handcalcs.yml  python-latexify-py.yml  report.yaml  report.yml  simulation.yml  su2.yml  sync.yml
_sources/: markdown-notebooks.md  notebooks.ipynb
foo/: 1.py  2.py  3.py  4.py  C_analytical.m  circulo.m  diffusion.m
sandbox/: Untitled.ipynb  clawpack.ipynb  convergence.ipynb  foo.ipynb  geometry.article.tex  geometry.beamer.tex  geometry.handout.tex  geometry.tex
sandbox/examples/: advection.py
sandbox/foo/: 5.py
site/: Makefile  hugo.toml
site/content/: _index.md  software.md
src/: beamerthemeNumericalThesis.sty  content.tex  main.beamer.tex  main.book.tex  main.report.tex  preamble.beamer.tex  preamble.report.tex  quadrature.tex  v1.tex  v2.tex
src/Docker/: README.md  python-centpy-git.Dockerfile  python-clawpack.Dockerfile  python-handcalcs.Dockerfile  python-latexify-py.Dockerfile  simulation.Dockerfile  su2.Dockerfile
src/Python/: advection_diffusion_analytical.py  exact_solution.py  initial_condition.py  newton.py  pyproject.toml
src/Python/thesis-book/: _config.yml  markdown-notebooks.md  markdown.md
src/TeX/: beamerthemeNumericalThesis.sty  (+11 more)
(+99 files in other folders)
